--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,6 +43,12 @@
         android:layout_height="wrap_content"
 
         android:text="-" />
+        <Button
+            android:id="@+id/btnsb"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+
+            android:text="-" />
 
     <Button
         android:id="@+id/btnmultiply"
